# duckdb-postgres

./: .gitignore  .gitmodules  CMakeLists.txt  PROMPT.md  README.md  create-postgres-tables.sh  create-yugabyte-tables.sh  extension_config.cmake  vcpkg.json
.github/workflows/: IntegrationTests.yml  Linux.yml  MainDistributionPipeline.yml  internal-build.yml
docs/superpowers/plans/: 2026-04-27-yugabyte-integration.md
docs/superpowers/specs/: 2026-04-27-yugabyte-integration-design.md
scripts/: time_tests.py  win_resources.patch
src/: CMakeLists.txt  postgres_attach.cpp  postgres_aws.cpp  postgres_binary_copy.cpp  postgres_binary_file_reader.cpp  postgres_binary_parser.cpp  postgres_binary_reader.cpp  postgres_connection.cpp  postgres_copy_from.cpp  postgres_copy_to.cpp  postgres_execute.cpp  postgres_extension.cpp  postgres_filter_pushdown.cpp  postgres_hstore.cpp  postgres_logging.cpp  postgres_oauth.cpp  postgres_parameters.cpp  postgres_query.cpp  postgres_scanner.cpp  postgres_secret_storage.cpp  postgres_secrets.cpp  postgres_storage.cpp  postgres_text_reader.cpp  postgres_utils.cpp  process_exec.cpp
src/dbconnector/: CMakeLists.txt
src/include/: postgres_aws.hpp  postgres_binary_copy.hpp  postgres_binary_file_reader.hpp  postgres_binary_parser.hpp  postgres_binary_reader.hpp  postgres_binary_writer.hpp  postgres_connection.hpp  postgres_filter_pushdown.hpp  postgres_hstore.hpp  postgres_logging.hpp  postgres_oauth.hpp  postgres_parameters.hpp  postgres_result.hpp  postgres_result_reader.hpp  postgres_scanner.hpp  postgres_secret_storage.hpp  postgres_secrets.hpp  postgres_text_reader.hpp  postgres_utils.hpp  postgres_version.hpp  process_exec.hpp  yugabyte_topology.hpp
src/include/storage/: postgres_catalog.hpp  postgres_catalog_set.hpp  postgres_connection_pool.hpp  postgres_delete.hpp  postgres_index.hpp  postgres_index_entry.hpp  postgres_index_set.hpp  postgres_insert.hpp  postgres_optimizer.hpp  postgres_schema_entry.hpp  postgres_schema_set.hpp  postgres_secret_storage.hpp  postgres_table_entry.hpp  postgres_table_set.hpp  (+5 more)
src/storage/: CMakeLists.txt  postgres_catalog.cpp  postgres_catalog_set.cpp  postgres_clear_cache.cpp  postgres_configure_pool.cpp  postgres_connection_pool.cpp  postgres_delete.cpp  postgres_index.cpp  postgres_index_entry.cpp  postgres_index_set.cpp  postgres_insert.cpp  postgres_merge_into.cpp  postgres_optimizer.cpp  postgres_schema_entry.cpp  postgres_schema_set.cpp  postgres_secret_storage.cpp  postgres_table_entry.cpp  postgres_table_set.cpp  postgres_transaction.cpp  postgres_transaction_manager.cpp  postgres_type_entry.cpp  postgres_type_set.cpp  postgres_update.cpp
test/: legacy_text_protocol.sql  other.sql
test/sql/: debug.test
test/stub/: aws  aws.cmd
vcpkg_ports/libpq/: portfile.cmake
(+129 files in other folders)
